--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   http: ^0.13.5
   flutter_riverpod: ^1.0.4
   nb_utils: ^4.6.21
+  image_picker: ^0.8.5+3
+  path_provider: ^2.0.11
+  file_picker: ^5.2.0
 
 dev_dependencies:
   flutter_test:
